--- a/HandlingDate_and_Times.ipynb
+++ b/HandlingDate_and_Times.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingDate_and_Times",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZpMChQZOsUaYUE+3gG3j5",
+      "authorship_tag": "ABX9TyP9ggB8Cds+07SgfUbWn09R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1068,12 +1068,321 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 7.4 Breaking Up Date Data into Multiple Features\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have a column of dates and times and you want to create features for year,\n",
+        "month, day, hour, and minute.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Use pandas Series.dt ’s time properties:"
+      ],
+      "metadata": {
+        "id": "NYC1LLN-GknQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create data frame\n",
+        "df = pd.DataFrame()"
+      ],
+      "metadata": {
+        "id": "f8wWApopF0jQ"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create five dates\n",
+        "df['date'] = pd.date_range('1/1/2001', periods=150, freq='W')"
+      ],
+      "metadata": {
+        "id": "yZvMtexsIpq-"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create features for year, month, day,, hour, and minute\n",
+        "df['year'] = df['date'].dt.year\n",
+        "df['month'] = df['date'].dt.month\n",
+        "df[\"day\"] = df['date'].dt.day\n",
+        "df[\"hour\"] = df['date'].dt.hour\n",
+        "df[\"minute\"] = df['date'].dt.minute"
+      ],
+      "metadata": {
+        "id": "NdyfcBLrI5Ur"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "id": "hb0E983aJOVY",
+        "outputId": "abf5f2da-ecd1-4c68-8c45-9fa14b5f70ea"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "          date  year  month  day  hour  minute\n",
+              "0   2001-01-07  2001      1    7     0       0\n",
+              "1   2001-01-14  2001      1   14     0       0\n",
+              "2   2001-01-21  2001      1   21     0       0\n",
+              "3   2001-01-28  2001      1   28     0       0\n",
+              "4   2001-02-04  2001      2    4     0       0\n",
+              "..         ...   ...    ...  ...   ...     ...\n",
+              "145 2003-10-19  2003     10   19     0       0\n",
+              "146 2003-10-26  2003     10   26     0       0\n",
+              "147 2003-11-02  2003     11    2     0       0\n",
+              "148 2003-11-09  2003     11    9     0       0\n",
+              "149 2003-11-16  2003     11   16     0       0\n",
+              "\n",
+              "[150 rows x 6 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-e5846487-17f4-464e-80ea-894899aecb5f\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>year</th>\n",
+              "      <th>month</th>\n",
+              "      <th>day</th>\n",
+              "      <th>hour</th>\n",
+              "      <th>minute</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2001-01-07</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2001-01-14</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>1</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2001-01-21</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>1</td>\n",
+              "      <td>21</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2001-01-28</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>1</td>\n",
+              "      <td>28</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2001-02-04</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>145</th>\n",
+              "      <td>2003-10-19</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>10</td>\n",
+              "      <td>19</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>146</th>\n",
+              "      <td>2003-10-26</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>10</td>\n",
+              "      <td>26</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>147</th>\n",
+              "      <td>2003-11-02</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>11</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>148</th>\n",
+              "      <td>2003-11-09</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>11</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>149</th>\n",
+              "      <td>2003-11-16</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>11</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>150 rows × 6 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5846487-17f4-464e-80ea-894899aecb5f')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-e5846487-17f4-464e-80ea-894899aecb5f button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-e5846487-17f4-464e-80ea-894899aecb5f');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "f8wWApopF0jQ"
+        "id": "Arv4IibnJdHY"
       },
       "execution_count": null,
       "outputs": []
