Starting Learning Calculating the Difference Between Dates

--- a/HandlingDate_and_Times.ipynb
+++ b/HandlingDate_and_Times.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingDate_and_Times",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9ggB8Cds+07SgfUbWn09R",
+      "authorship_tag": "ABX9TyNLQd9whUpuSu4BswSeQKtv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1375,6 +1375,24 @@
           "execution_count": 36
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Calculating the Difference Beatween Dates\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have two datetime features and want to calculate the time between them for each\n",
+        "observation.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Subtract the two date features using pandas:"
+      ],
+      "metadata": {
+        "id": "seIAaypuTzAC"
+      }
     },
     {
       "cell_type": "code",
