Encoding Day of week learned

--- a/HandlingDate_and_Times.ipynb
+++ b/HandlingDate_and_Times.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "HandlingDate_and_Times",
       "provenance": [],
-      "authorship_tag": "ABX9TyPh7dI1MKJDTc2wXFH0Qi5w",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNhWSz3NYPxWLxdQ6nD+yla",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1630,6 +1631,7 @@
         "## Encoding Days of the Week\n",
         "\n",
         "**Problem**\n",
+        "\n",
         "You have a vector of dates and want to know the day of the week for each date.\n",
         "\n",
         "**Solution**\n",
@@ -1643,10 +1645,51 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "date = pd.Series(pd.date_range('2/2/2002', periods=3, freq='M'))"
       ],
       "metadata": {
         "id": "LFL7am6eXXMf"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show the day of the week\n",
+        "date.dt.weekday"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZyIKx94el3_l",
+        "outputId": "ff75a2b9-7c25-430c-f9de-dd268387531d"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    3\n",
+              "1    6\n",
+              "2    1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "YDDUmWo9l-ak"
       },
       "execution_count": null,
       "outputs": []
