Start Learning Rolling Time Windows

--- a/HandlingDate_and_Times.ipynb
+++ b/HandlingDate_and_Times.ipynb
@@ -6,7 +6,7 @@
       "name": "HandlingDate_and_Times",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7ne/d5P0146d4pEq1d2zy",
+      "authorship_tag": "ABX9TyMUU8fyxHrjVD9cE8tY7F3Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2067,7 +2067,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "## 7.8 Using Rolling Time Windows\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "Given time series data, you want to calculate some statistic for a rolling time."
       ],
       "metadata": {
         "id": "3Hy70YjIpwxr"
