Saving Images with cv2.imwrite Learned

--- a/HandlingImageData.ipynb
+++ b/HandlingImageData.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingImageData",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcOYe/PPgYaLugrM2geolK",
+      "authorship_tag": "ABX9TyMOhIwrfLws1tQByAOM39GA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -405,12 +405,68 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 8.2 Saving Images\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You want to save an image for preprocessing.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Use OpenCV’s imwrite :"
+      ],
+      "metadata": {
+        "id": "4WDlxPtYTfhI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Load image as grayscale\n",
+        "image = cv2.imread('sim_data/images/plane.jpg', cv2.IMREAD_GRAYSCALE)"
+      ],
+      "metadata": {
+        "id": "GM0uIu_kLvm_"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save image\n",
+        "cv2.imwrite('sim_data/images/plane_new.jpg', image)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EeIBXzPwUQbv",
+        "outputId": "6406b22d-76af-400a-f623-46b04f564bbd"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "GM0uIu_kLvm_"
+        "id": "O_9tUURZUbns"
       },
       "execution_count": null,
       "outputs": []
