Starting Learning Resizing Images with cv2

--- a/HandlingImageData.ipynb
+++ b/HandlingImageData.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingImageData",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOhIwrfLws1tQByAOM39GA",
+      "authorship_tag": "ABX9TyM5Ygw3VWb2Gnn0nQWHJyDh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -459,6 +459,23 @@
           "execution_count": 38
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Resizing Images\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You want to resize an image for further preprocessing.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Use resize to change the size of an image:"
+      ],
+      "metadata": {
+        "id": "zX6QtNR_VgZ8"
+      }
     },
     {
       "cell_type": "code",
