Starting Learning Blurring Images

--- a/HandlingImageData.ipynb
+++ b/HandlingImageData.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingImageData",
       "provenance": [],
-      "authorship_tag": "ABX9TyPP62My99ISV4h8/vx2yo9I",
+      "authorship_tag": "ABX9TyN01AR3fwVGTMrqbFS7h8LG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -747,6 +747,28 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 8.5 Blurring Images\n",
+        "\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You want to smooth out an image.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "To blur an image, each pixel is transformed to be the average value of its neighbors.\n",
+        "This neighbor and the operation performed are mathematically represented as a ker‐\n",
+        "nel (don’t worry if you don’t know what a kernel is). The size of this kernel deter‐\n",
+        "mines the amount of blurring, with larger kernels producing smoother images. Here\n",
+        "we blur an image by averaging the values of a 5 × 5 kernel around each pixel:"
+      ],
+      "metadata": {
+        "id": "dDyB5DaMcd9U"
+      }
     },
     {
       "cell_type": "code",
