Starting learning Enhancing(Améliorer le contrast) Constrast

--- a/HandlingImageData.ipynb
+++ b/HandlingImageData.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingImageData",
       "provenance": [],
-      "authorship_tag": "ABX9TyOT/aL6EpsrUNvkSEFk5Lh4",
+      "authorship_tag": "ABX9TyN+26W36f+l261eapKPeHA7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1290,6 +1290,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 8.7 Enhancing Contrast(Améliorer le contrast)"
+      ],
+      "metadata": {
+        "id": "SnVm_qrNe-Gj"
+      }
     },
     {
       "cell_type": "code",
