Reducing Dimensionality Using TruncatedSVD for sparse matrix learned

--- a/ReduceDimensionUsingFeatureExtraction.ipynb
+++ b/ReduceDimensionUsingFeatureExtraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ReduceDimensionUsingFeatureExtraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyM8uSVRQhnMi4CJffxtn0WD",
+      "authorship_tag": "ABX9TyOCYFd9+VdJQMWpHoOi2A0q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,7 @@
         "variance dans les données.\n",
         "\n",
         "**Solution**\n",
+        "\n",
         " Nous allons utiliser **Principal Component Analysis** du module **sklearn.decomposition**"
       ],
       "metadata": {
@@ -550,7 +551,15 @@
       "source": [
         "## 9.5 Reducing Features on Sparse Data\n",
         "\n",
-        "**Données éparses: Sont des données dont la grande majorité sont à zéro**"
+        "**Données éparses: Sont des données dont la grande majorité sont à zéro**\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have a sparse feature matrix and want to reduce the dimensionality.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Use Truncated Singular Value Decomposition (TSVD):"
       ],
       "metadata": {
         "id": "nqQYmV-_JbXp"
@@ -561,10 +570,162 @@
       "source": [
         "# Load libraries\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn."
+        "from sklearn.decomposition import TruncatedSVD\n",
+        "from scipy.sparse import csr_matrix"
       ],
       "metadata": {
         "id": "TNcllp9jIVfK"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load data\n",
+        "digits = datasets.load_digits()"
+      ],
+      "metadata": {
+        "id": "41zOt1KqK1l6"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Standardize feature matrix\n",
+        "features = StandardScaler().fit_transform(digits.data)"
+      ],
+      "metadata": {
+        "id": "XOMoehzzRynQ"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show 5 first features\n",
+        "features[:1, :5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zZCGkbaaR8tZ",
+        "outputId": "57a15229-676f-4244-d641-2a1d3e0f715a"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.        , -0.33501649, -0.04308102,  0.27407152, -0.66447751]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make sparse matrix\n",
+        "features_sparse = csr_matrix(features)"
+      ],
+      "metadata": {
+        "id": "P4MOgzvZSDll"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show features sparse matrux\n",
+        "features_sparse[:1, :5].toarray()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1R20FaxWSTZ2",
+        "outputId": "c5a84c55-3487-4eef-d57e-0c460a6bda68"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.        , -0.33501649, -0.04308102,  0.27407152, -0.66447751]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a TSVD\n",
+        "tsvd = TruncatedSVD(n_components=10)"
+      ],
+      "metadata": {
+        "id": "YnyblIcKSZEb"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Apply Truncated Singular Values Decomposition(TSVD) on sparse matrix\n",
+        "features_sparse_tsvd = tsvd.fit(features_sparse).transform(features_sparse)"
+      ],
+      "metadata": {
+        "id": "aPU9MZ-uSwvp"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show the results\n",
+        "print(\"Original number of features: {}\".format(features.shape))\n",
+        "print(\"Reduced number of features: {}\".format(features_sparse_tsvd.shape))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1neAvu3HTHR2",
+        "outputId": "cc7cfc79-fa46-422e-96d3-6150c17aea9d"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original number of features: (1797, 64)\n",
+            "Reduced number of features: (1797, 10)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "t3X7lPFsTcI3"
       },
       "execution_count": null,
       "outputs": []
