Création d'un modèle de base pour la classification

--- a/Evaluating_Model.ipynb
+++ b/Evaluating_Model.ipynb
@@ -338,15 +338,357 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 11.2 Création d'un modèle de régression de base\n",
+        "\n",
+        "\n",
+        "**Problème**\n",
+        "\n",
+        "Vous voulez un modèle de régression de base simple à comparer à votre modèle.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Utiliser le modèle DummyRegressor de sckit-learn pour créer un modèle simple à utiliser comme modèle de base\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "59ziKt7QQ2PU"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {
         "id": "KD4OaX9ZQWwS"
       },
       "outputs": [],
       "source": [
-        ""
+        "# Load libraries\n",
+        "from sklearn.datasets import load_boston\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.dummy import DummyRegressor"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load data\n",
+        "boston = load_boston()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yXXd5gBVR183",
+        "outputId": "59dfdcb0-1e01-49ea-df2c-a8f31d77aa5c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function load_boston is deprecated; `load_boston` is deprecated in 1.0 and will be removed in 1.2.\n",
+            "\n",
+            "    The Boston housing prices dataset has an ethical problem. You can refer to\n",
+            "    the documentation of this function for further details.\n",
+            "\n",
+            "    The scikit-learn maintainers therefore strongly discourage the use of this\n",
+            "    dataset unless the purpose of the code is to study and educate about\n",
+            "    ethical issues in data science and machine learning.\n",
+            "\n",
+            "    In this special case, you can fetch the dataset from the original\n",
+            "    source::\n",
+            "\n",
+            "        import pandas as pd\n",
+            "        import numpy as np\n",
+            "\n",
+            "\n",
+            "        data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+            "        raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+            "        data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+            "        target = raw_df.values[1::2, 2]\n",
+            "\n",
+            "    Alternative datasets include the California housing dataset (i.e.\n",
+            "    :func:`~sklearn.datasets.fetch_california_housing`) and the Ames housing\n",
+            "    dataset. You can load the datasets as follows::\n",
+            "\n",
+            "        from sklearn.datasets import fetch_california_housing\n",
+            "        housing = fetch_california_housing()\n",
+            "\n",
+            "    for the California housing dataset and::\n",
+            "\n",
+            "        from sklearn.datasets import fetch_openml\n",
+            "        housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+            "\n",
+            "    for the Ames housing dataset.\n",
+            "    \n",
+            "  warnings.warn(msg, category=FutureWarning)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create features\n",
+        "features, target = boston.data, boston.target"
+      ],
+      "metadata": {
+        "id": "exOcybL6SIM7"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# feature's shape\n",
+        "features.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rXbnYGOaSR3D",
+        "outputId": "efc61162-5ab1-4cc9-e862-eb14db3d6b15"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(506, 13)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make test and training split\n",
+        "features_train, features_test, target_train, target_test = train_test_split(\n",
+        "    features, target, random_state=0\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "QO8r0iYsSWVA"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a dummy regressor\n",
+        "dummy = DummyRegressor(strategy='mean')"
+      ],
+      "metadata": {
+        "id": "UruXlBHESnNA"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 'Train' dummy regressor\n",
+        "dummy.fit(features_train, target_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FdB1VArhVhpP",
+        "outputId": "d03e3d98-5964-4b05-eda6-37f50639a614"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DummyRegressor()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get R-squared score\n",
+        "dummy.score(features_train, target_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IGPcJmfmVu-9",
+        "outputId": "8010af5e-1901-44ab-a021-44c6499143be"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Let create a linear model to compare to dummy regressor**"
+      ],
+      "metadata": {
+        "id": "tFkNabrmV-6a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load libray \n",
+        "from sklearn.linear_model import LinearRegression"
+      ],
+      "metadata": {
+        "id": "lVExnpwrV9DD"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create and \"Train\" the linear model\n",
+        "linear = LinearRegression()\n",
+        "\n",
+        "# 'train' the model\n",
+        "linear.fit(features_train, target_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bIv01c3IWPpf",
+        "outputId": "c13fe38b-f4b6-4d4b-bede-33698ff7f235"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get R-squared score for linear model\n",
+        "linear.score(features_train, target_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "USLIYZI4Wc-n",
+        "outputId": "d29c1436-b21d-4cdb-981b-9acf5b2ecbdd"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7697699488741149"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**NOTE**\n",
+        "\n",
+        "**DummyRegresoor**, Nous permet de créer un modèke de base pour faire le test avec d'autres modèles pour évaluer la performance de ces derniers"
+      ],
+      "metadata": {
+        "id": "WsMvp04DWo6F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Créer un modèle de base pour la classification\n",
+        "\n",
+        "**Problème**\n",
+        "\n",
+        "Créer un modèle de base pour la classification à comparer avec d'autres modèles\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Nous allons utiliser la classe DummyClassifier de scikit-learn"
+      ],
+      "metadata": {
+        "id": "wDyN2hgucOn5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load librairies\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.dummy import DummyClassifier"
+      ],
+      "metadata": {
+        "id": "uRFvGvvaWkDr"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load data\n",
+        "iris = load_iris()"
+      ],
+      "metadata": {
+        "id": "gSeUFaUGdE3C"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "0172B91HdIxK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
